Rolling back the efert redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,11 @@
+# [build]
+#   publish = "public"
+#   command = "mkdir -p public/efert && gridsome build && cp -R dist/* public/efert"
+# 
+# [[redirects]]
+# from = "/"
+# to = "/efert"
+
 [build]
-  publish = "public"
-  command = "mkdir -p public/efert && gridsome build && cp -R dist/* public/efert"
-
-[[redirects]]
-from = "/"
-to = "/efert"
-
+  publish = "dist"
+  command = "gridsome build"
